--- a/templates/chat.html
+++ b/templates/chat.html
@@ -2,7 +2,45 @@
 	<head>
 		<title>チャット</title>
 	</head>
+	<style>
+		input { display : block; }
+		ul {list-style: none; }
+	</style>
 	<body>
-		チャットしましょう（テンプレートより）
+		<ul id="messages"></ul>
+		Websocketを使ったチャットアプリケーション
+		<form id="chatbox">
+			<textarea></textarea>
+			<input type="submit" name="送信" />
+		</form>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<script>
+			$(function(){
+				var socket = null;
+				var msgBox = $("#chatbox textarea");
+				var messages =  $("#messages");
+				$("#chatbox").submit(function(){
+					if(!msgBox.val())return false;
+					if(!socket){
+						alart("エラー: WebSocket接続が行われていません。");
+						return false;
+					}
+					socket.send(msgBox.val());
+					msgBox.val("");
+					return false;
+				});
+				if(!window["WebSocket"]){
+					alart("WebSocketに対応していないブラウザです。");
+				}else{
+					socket = new WebSocket("ws://localhost:8080/room");
+					socket.onclose = function(){
+						alart("接続解除しました。");
+					}
+					socket.onmessage = function(e){
+						messages.append($("<li>").text(e.data));
+					}
+				}
+			});
+		</script>
 	</body>
-<html>
+</html>
