--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -17,32 +17,37 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script>
 			$(function(){
-				var socket = null;
-				var msgBox = $("#chatbox textarea");
-				var messages =  $("#messages");
-				$("#chatbox").submit(function(){
-					if(!msgBox.val())return false;
-					if(!socket){
-						alert("エラー: WebSocket接続が行われていません。");
-						return false;
-					}
-					socket.send(msgBox.val());
-					msgBox.val("");
-					return false;
-				});
-				if(!window["WebSocket"]){
-					alert("WebSocketに対応していないブラウザです。");
-				}else{
-					socket = new WebSocket("ws://{{.Host}}/room");
-					//.Hostはr.Hostに置き換えるという意味
-					socket.onclose = function(){
-						alert("接続解除しました。");
-					}
-					socket.onmessage = function(e){
-						messages.append($("<li>").text(e.data));
-					}
-				}
-			});
+		        var socket = null;
+		        var msgBox = $("#chatbox textarea");
+		        var messages = $("#messages");
+		        $("#chatbox").submit(function(){
+		          if (!msgBox.val()) return false;
+		          if (!socket) {
+		            alert("Error: There is no socket connection.");
+		            return false;
+		          }
+		          socket.send(JSON.stringify({"Message": msgBox.val()}));
+		          msgBox.val("");
+		          return false;
+		        });
+		        if (!window["WebSocket"]) {
+		          alert("Error: Your browser does not support web sockets.")
+		        } else {
+		          socket = new WebSocket("ws://{{.Host}}/room");
+		          socket.onclose = function() {
+		            alert("Connection has been closed.");
+		          }
+		          socket.onmessage = function(e) {
+		            var msg = JSON.parse(e.data);
+		            messages.append(
+		              $("<li>").append(
+		                $("<strong>").text(msg.Name + ": "),
+		                $("<span>").text(msg.Message)
+		              )
+		            );
+		          }
+		        }
+		      });
 		</script>
 	</body>
 </html>
