--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -13,6 +13,7 @@
 		<form id="chatbox">
 			<textarea></textarea>
 			<input type="submit" name="送信" />
+			または<a href = "/logout">サインアウト</a>
 		</form>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script>
@@ -41,6 +42,10 @@
 		            var msg = JSON.parse(e.data);
 		            messages.append(
 		              $("<li>").append(
+		              	$("<img>").css({
+		              		width:50,
+		              		verticalAlign: "middle"
+		              	}).attr("src", msg.AvatarURL),
 		                $("<strong>").text(msg.Name + ": "),
 		                $("<span>").text(msg.Message)
 		              )
